--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,24 @@
+# Dependencies
+/node_modules
+/dist
+
+# Environment variables
+.env.local
+.env.*.local
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-# .gitignore
 
-# local env files
-.env.local
-.env.*.local
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+# IDEs and editors
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+
+# OS-generated files
+.DS_Store
+Thumbs.db
